--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ header nav ul li a {
 
 .prices_container {
   background: #0047ff url(./src/grid.png);
-  padding: 4em 0;
+  padding: 0.5em 0 4em 0;
 }
 .prices {
   max-width: 1350px;
@@ -257,18 +257,33 @@ header nav ul li a {
   text-align: center;
   padding: 1em 0;
 }
-.galery_container{
+.galery_container {
   background-color: #e4f422;
+  height: 60vh;
 }
-.galery_article{
+.galery_title {
+  font-family: fontTitle;
+  text-align: center;
+  font-size: 3em;
+  padding: 1.5em 0 1em 0;
+}
+.galery_article {
   width: 90%;
   max-width: 1350px;
   margin: auto;
 }
-.galery_foto{
+.galery_foto {
   width: auto;
   height: auto;
-  max-width: 80%;
+  max-width: 100%;
+}
+.fotos_container {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 50%;
+  overflow-x: auto;
+  overscroll-behavior-inline: contain;
+  gap: 1rem;
 }
 @media all and (min-width: 850px) {
   header {
@@ -311,21 +326,22 @@ header nav ul li a {
   }
   .card {
     width: 30%;
-    height: 40vh;
+    height: auto;
     justify-content: center;
     background-color: #e4f422;
     text-align: center;
     display: flex;
     flex-direction: column;
     gap: 1em;
+    padding: 3em 0;
   }
   .text_article_aboutUs {
     width: 47%;
     font-family: "aileronRegular";
     color: white;
     text-align: left;
-    font-size: 1.2em;
-    margin-top: 2.5em;
+    font-size: 1em;
+    margin-top: 3%;
   }
   .foto_barber1 {
     background: url(./src/barber1_optimize.jpg);
@@ -342,5 +358,20 @@ header nav ul li a {
   }
   .title_article_aboutUs {
     text-align: left;
+  }
+  .galery_foto {
+    width: auto;
+    height: auto;
+    height: 30vh;
+    max-width: 100%;
+  }
+  .fotos_container {
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 50%;
+    grid-template-rows: 2fr;
+    overflow-x: none;
+    overscroll-behavior-inline: none;
+    gap: 1rem;
   }
 }
